// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RightMenuContainer component recieves className 1`] = `
<div
  className="right_menu_container TEST_CLASS"
>
  TEST
</div>
`;

exports[`RightMenuContainer component renders children 1`] = `
<div
  className="right_menu_container"
>
  TEST
</div>
`;
